# opencv-preprocessing-cpu-vs-gpu

./: CMakeLists.txt  README.md
data/: sample_images
include/opencv-preprocessing-cpu-vs-gpu/: cpu_pipeline.hpp  gpu_pipeline.hpp  utils.hpp
src/: cpu_pipeline.cpp  cpu_pipeline.hpp  gpu_pipeline.cpp  gpu_pipeline.hpp  main.cpp  utils.cpp  utils.hpp
